changed css to ensure body covers entire page

--- a/css/general.css
+++ b/css/general.css
@@ -8,13 +8,25 @@
 body {    
     background-color: var(--page-color, beige);
     font-family: var(--body-text-font, 'Times New Roman', Times, serif);
+    margin: 0;
+    & * {
+        margin: 0.5vh 0.5vw 0.5vh 0.5vw;
+    }
+    
+}
+
+header {
+    margin: 0 0 0.5vh 0;
 }
 
 h1 {
+    margin: 0 0 0 0; 
+    padding-left: 0.5vw;
+    padding-right: 0.5vw;
     font-family: var(--heading-font, Verdana, Geneva, Tahoma, sans-serif);    
     color: white;
     background-color: color-mix(in srgb, orange 75%, black 25%);
-    justify-content: center;
+    text-align: center;
 }
 
 h2, h3 {
@@ -25,6 +37,9 @@ h2, h3 {
 
 nav {
     background-color: var(--nav-bar-color, rgb(39, 162, 139));
+    margin: 0 0 0 0;
+    padding: 0.5vh 0.5vw 0.5vh 0.5vw;
+    
 }
 
 img {
